[package]
name = "tribble-tracker-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "macros"] }
regex = "1.11"
indexmap = { version = "2.14.0", features = ["serde"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
