# SPDX-FileCopyrightText: 2026 The LineageOS Project
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "tribble-tracker-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["typed-header"] }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "macros"] }
regex = "1.11"
indexmap = { version = "2.14.0", features = ["serde"] }
cached = { version = "1.0.0", features = ["tokio", "serde", "async", "async_tokio_rt_multi_thread"] }
tower-http = { version = "0.6.11", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
log = "0.4.30"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
